src/java/algorithm-jna/src/main/java/com/sengled/media/jna/yuvencoder/YuvencoderLibrary.java

package com.sengled.media.jna.yuvencoder;
import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import java.nio.ByteBuffer;
/**
 * JNA Wrapper for library <b>yuvencoder</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface YuvencoderLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = "yuvencoder";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(YuvencoderLibrary.JNA_LIBRARY_NAME);
	public static final YuvencoderLibrary INSTANCE = (YuvencoderLibrary)Native.loadLibrary(YuvencoderLibrary.JNA_LIBRARY_NAME, YuvencoderLibrary.class);
	/** <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/encoder/src/yuvencoder.h:10</i> */
	public interface Init_log_callback_callback extends Callback {
		void apply(int level, Pointer charPtr1);
	};
	/**
	 * Original signature : <code>int Init(Init_log_callback_callback*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/encoder/src/yuvencoder.h:10</i>
	 */
	int Init(YuvencoderLibrary.Init_log_callback_callback log_callback);
	/**
	 * Original signature : <code>int EncodeJPG(char*, int, int, int, int, const char*, JPGFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/encoder/src/yuvencoder.h:12</i><br>
	 * @deprecated use the safer methods {@link #EncodeJPG(java.nio.ByteBuffer, int, int, int, int, java.lang.String, com.sengled.media.jna.yuvencoder.JPGFrame)} and {@link #EncodeJPG(com.sun.jna.Pointer, int, int, int, int, com.sun.jna.Pointer, com.sengled.media.jna.yuvencoder.JPGFrame)} instead
	 */
	@Deprecated 
	int EncodeJPG(Pointer data_buffer, int src_width, int src_height, int dst_width, int dst_height, Pointer token, JPGFrame jpg_frame);
	/**
	 * Original signature : <code>int EncodeJPG(char*, int, int, int, int, const char*, JPGFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/encoder/src/yuvencoder.h:12</i>
	 */
	int EncodeJPG(ByteBuffer data_buffer, int src_width, int src_height, int dst_width, int dst_height, String token, JPGFrame jpg_frame);
	/**
	 * Original signature : <code>int Destroy(JPGFrame*)</code><br>
	 * <i>native declaration : /home/chenxh/workspace/gitlab.com/algorithm/src/c/encoder/src/yuvencoder.h:14</i>
	 */
	int Destroy(JPGFrame jpg_frame);
}
